Fixed database crash when accessing to an empty table by: -Adding Count Query to all daos -Adding methods in NCoVRepository to check if tables are empty or not Other minor changes in class and package names

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="?android:attr/actionBarSize"
-    tools:context=".ui.notifications.NotificationsFragment">
+    tools:context=".ui.graphs.GraphsFragment">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
