--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        tools:context=".ui.home.HomeFragment">
+        tools:context=".ui.global.GlobalFragment">
 
         <TextView
             android:id="@+id/total_cases"
