--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.ncov19traking.ui.home.HomeFragment"
+        android:name="com.example.ncov19traking.ui.global.GlobalFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.ncov19traking.ui.dashboard.DashboardFragment"
+        android:name="com.example.ncov19traking.ui.countries.CountriesFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.ncov19traking.ui.notifications.NotificationsFragment"
+        android:name="com.example.ncov19traking.ui.graphs.GraphsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
