Implemented sort button on action bar which is actually a toggle button between alphabetically sort and active cases sort.

--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -12,6 +12,12 @@
         android:title="@string/appbarRefresh"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/appbar_sort"
+        android:title="@string/Sort"
+        android:icon="@drawable/ic_sort_black_24dp"
+        app:showAsAction="ifRoom" />
+
     <item android:id="@+id/appbar_about"
         android:title="@string/appbarAbout"
         app:showAsAction="never"/>
