deleted useless db access methods and verifications
extracted dummy strings and colors to resources

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="recoveredColor">#4CAF50</color>
     <color name="deathsColor">#B71C1C</color>
     <color name="criticalColor">#FF9800</color>
+    <color name="graphTextColor">#9E9E9E</color>
 </resources>
