Implemented the Night mode and added the Settings Activity

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
             android:layout_marginEnd="8dp"
             android:textAlignment="center"
             android:textSize="@dimen/home_text_size"
+            tools:text="1244352"
             app:layout_constraintBottom_toTopOf="@+id/recovered_numbers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -34,6 +35,7 @@
             android:layout_marginEnd="8dp"
             android:textColor="@color/recoveredColor"
             android:textSize="@dimen/home_text_size"
+            tools:text="342352"
             app:layout_constraintBottom_toTopOf="@+id/deaths_numbers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -47,6 +49,7 @@
             android:layout_marginEnd="8dp"
             android:textColor="@color/deathsColor"
             android:textSize="@dimen/home_text_size"
+            tools:text="2435324"
             app:layout_constraintBottom_toTopOf="@+id/last_update_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -83,6 +86,7 @@
             android:layout_marginEnd="8dp"
             android:text="@string/recovered_title"
             android:textSize="@dimen/home_text_size"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/deaths_cases_title"
             app:layout_constraintEnd_toStartOf="@+id/recovered_numbers"
             app:layout_constraintHorizontal_bias="0.5"
@@ -97,6 +101,7 @@
             android:layout_marginEnd="8dp"
             android:text="@string/deaths_title"
             android:textSize="@dimen/home_text_size"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/last_update"
             app:layout_constraintEnd_toStartOf="@+id/deaths_numbers"
             app:layout_constraintHorizontal_bias="0.5"
@@ -111,6 +116,7 @@
             android:layout_marginEnd="8dp"
             android:text="@string/total_cases_title"
             android:textSize="@dimen/home_text_size"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/recovered2"
             app:layout_constraintEnd_toStartOf="@+id/total_cases"
             app:layout_constraintHorizontal_bias="0.5"
@@ -124,6 +130,7 @@
             android:layout_marginTop="16dp"
             android:text="Global"
             android:textSize="20sp"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -143,7 +150,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="@+id/total_cases"
             app:layout_constraintStart_toStartOf="@+id/total_cases"
             app:layout_constraintTop_toBottomOf="@+id/total_cases" />
@@ -153,7 +159,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="@+id/recovered_numbers"
             app:layout_constraintStart_toStartOf="@+id/recovered_numbers"
             app:layout_constraintTop_toBottomOf="@+id/recovered_numbers" />
@@ -163,7 +168,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="@+id/deaths_numbers"
             app:layout_constraintStart_toStartOf="@+id/deaths_numbers"
             app:layout_constraintTop_toBottomOf="@+id/deaths_numbers" />
