--- a/app/src/main/res/layout/country_card.xml
+++ b/app/src/main/res/layout/country_card.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="Country Name"
-        android:textColor="@android:color/white"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
