Fixed issues based on PR suggestions, and added real settings persistence, using Preference API

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,8 +10,8 @@
         android:id="@+id/night_mode_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="@dimen/settings_element_margin"
+        android:layout_marginEnd="@dimen/settings_element_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,8 +19,8 @@
         android:id="@+id/night_mode_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="@dimen/settings_element_margin"
+        android:layout_marginTop="@dimen/settings_element_margin"
         android:text="@string/night_mode"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
