--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="home_text_size">32sp</dimen>
     <dimen name="card_text_size">12sp</dimen>
+    <dimen name="settings_element_margin">24dp</dimen>
 </resources>
