--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimary">#b794f6</color>
     <color name="colorPrimaryDark">#121212</color>
     <color name="colorAccent">#b794f6</color>
     <color name="recoveredColor">#c6f68d</color>
