--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -2,7 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="home_text_size">32sp</dimen>
+    <dimen name="home_text_size">16sp</dimen>
     <dimen name="card_text_size">12sp</dimen>
     <dimen name="settings_element_margin">24dp</dimen>
+    <dimen name="cards_width">150dp</dimen>
+    <dimen name="cards_height">100dp</dimen>
+    <dimen name="cards_margin_parent_top">64dp</dimen>
+    <dimen name="cards_margin_parent_end">24dp</dimen>
+    <dimen name="text_card_padding">8dp</dimen>
+    <dimen name="increase_percentage_text_size">12sp</dimen>
 </resources>
