--- a/app/src/main/res/layout/fragment_global.xml
+++ b/app/src/main/res/layout/fragment_global.xml
@@ -174,6 +174,8 @@
             android:layout_height="@dimen/cards_height"
             android:layout_marginTop="@dimen/cards_margin_parent_top"
             android:layout_marginEnd="@dimen/cards_margin_parent_end"
+            android:layout_marginBottom="@dimen/cards_margin_bottom_from_parent"
+            app:layout_constraintBottom_toTopOf="@+id/last_update_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
@@ -208,8 +210,8 @@
                     android:id="@+id/percentageDeathsDifference"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/increase_percentage_text_size"
                     android:layout_marginBottom="@dimen/text_card_padding"
+                    android:textSize="@dimen/increase_percentage_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
