--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,17 @@
         android:id="@+id/navigation_home"
         android:name="com.example.ncov19traking.ui.global.GlobalFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_global" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.ncov19traking.ui.countries.CountriesFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_countries" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.ncov19traking.ui.graphs.GraphsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_graphs" />
 </navigation>
