--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="text_card_padding">8dp</dimen>
     <dimen name="cases_numbers_size">16sp</dimen>
     <dimen name="increase_percentage_text_size">12sp</dimen>
+    <dimen name="cards_margin_bottom_from_parent">35dp</dimen>
 </resources>
